--- a/app/src/main/res/layout/fragment_meal_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_meal_of_the_day.xml
@@ -56,6 +56,7 @@
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/alkatra"
                 android:textAlignment="center"
+                android:textColor="#403A3A"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
