--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -34,13 +34,13 @@
                 android:id="@+id/txtMealName"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="72dp"
                 android:fontFamily="@font/alkatra"
                 android:textAlignment="center"
                 android:textColor="#403A3A"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgMeal"
                 tools:text="Meal Title" />
@@ -98,21 +98,31 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewIngredients"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="411dp"
+                android:layout_height="108dp"
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
                 android:id="@+id/btnAddToFav"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="40dp"
                 android:text="@string/addToFav"
-                app:layout_constraintBottom_toBottomOf="@+id/imgMeal"
-                app:layout_constraintEnd_toEndOf="@+id/imgMeal" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imgMeal" />
+
+            <Button
+                android:id="@+id/btnRemoveFromFavMeal"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="12dp"
+                android:text="@string/rmFromFavShort"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imgMeal" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
