--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -98,11 +98,13 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewIngredients"
-                android:layout_width="411dp"
-                android:layout_height="108dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView4"
-                tools:layout_editor_absoluteX="0dp" />
+                android:layout_width="373dp"
+                android:layout_height="92dp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.473"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
             <Button
                 android:id="@+id/btnAddToFav"
