--- a/app/src/main/res/layout/fragment_meal_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_meal_of_the_day.xml
@@ -25,7 +25,7 @@
         android:id="@+id/cardMeal"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="20dp"
         app:cardBackgroundColor="#EFE7E7"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
@@ -65,5 +65,22 @@
                 tools:text="Meal Title" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCategories"
+        android:layout_width="409dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardMeal" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCountries"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewCategories" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
