--- a/app/src/main/res/layout/ingredient_row.xml
+++ b/app/src/main/res/layout/ingredient_row.xml
@@ -5,11 +5,12 @@
     android:id="@+id/row"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:elevation="20dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="153dp"
+        android:layout_height="121dp"
         app:cardCornerRadius="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,28 +22,33 @@
                 android:id="@+id/txtIngredient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="@+id/txtMeasure"
-                app:layout_constraintStart_toStartOf="@+id/txtMeasure"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.108"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imgView_ingredient"
                 tools:text="Ingredient" />
 
             <TextView
                 android:id="@+id/txtMeasure"
-                android:layout_width="100dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="3dp"
                 android:textAlignment="center"
-                app:layout_constraintStart_toEndOf="@+id/imgView_ingredient"
-                app:layout_constraintTop_toBottomOf="@+id/txtIngredient"
-                tools:text="Measure" />
+                app:layout_constraintStart_toEndOf="@+id/txtIngredient"
+                app:layout_constraintTop_toTopOf="@+id/txtIngredient"
+                tools:text="mes" />
 
             <ImageView
                 android:id="@+id/imgView_ingredient"
-                android:layout_width="80dp"
-                android:layout_height="71dp"
+                android:layout_width="90dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="7dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_launcher_background" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
