--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button2"
+                app:layout_constraintTop_toBottomOf="@+id/btnAddToPlan"
                 tools:text="Meal Title" />
 
             <TextView
@@ -129,7 +129,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imgMeal" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btnAddToPlan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="19dp"
