--- a/app/src/main/res/layout/fragment_weekly_planner.xml
+++ b/app/src/main/res/layout/fragment_weekly_planner.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F29D9D"
-    tools:context=".WeeklyPlannerFragment">
+    tools:context=".planner.view.WeeklyPlannerFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -23,7 +23,7 @@
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -31,8 +31,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewDayMeals"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
