--- a/app/src/main/res/layout/activity_add_to_plan.xml
+++ b/app/src/main/res/layout/activity_add_to_plan.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F29D9D"
     tools:context=".showMeal.view.AddToPlanActivity">
 
     <CalendarView
@@ -22,8 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/alkatra"
         android:text="@string/selectDate"
+        android:textColor="#1F1E1E"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
