--- a/app/src/main/res/layout/fragment_weekly_planner.xml
+++ b/app/src/main/res/layout/fragment_weekly_planner.xml
@@ -14,7 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/alkatra"
         android:text="@string/planner"
+        android:textColor="#1B1A1A"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="320dp"
         android:layout_marginTop="16dp"
+        android:focusedMonthDateColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
